# falconlogger

./: LICENSE  README.md  pyproject.toml
falconlogger/: flogger.py
